Mon Dec 15 23:36:26 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/jms/INSTALL:

          Fixed bad Windows path names.

        * tests/DCPS/FooTest3_0/PubDriver.cpp:

          Fixed failing liveliness test; updated unregister test.

Mon Dec 15 19:13:36 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/build_scripts/jms_scoreboard.pl:

          Adjusted test output to not print "Error" when there are none.

Mon Dec 15 05:57:16 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/jms/README:
        * java/jms/example:
        * java/jms/example/jboss:
        * java/jms/example/jboss/opendds-ds.xml:
        * java/jms/example/jboss/opendds-ir-ds.xml:
        * java/jms/compat/src/META-INF/service/opendds-ir-ds.xml:

          Added documentation.

Sun Dec 14 02:42:13 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/jms/compat/test/org/opendds/jms/MessageConsumerImplTest.java:
        * java/jms/compat/test/org/opendds/jms/MessageProducerImplTest.java:
        * java/jms/compat/test/org/opendds/jms/SessionImplTest.java:
        * java/jms/src/org/opendds/jms/DurableMessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/MessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/persistence/HibernatePersistenceManager.java:

          Final round of re-formatting and import optimization.

Sun Dec 14 00:06:46 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/jms/src/org/opendds/jms/BytesBodyFacade.java:
        * java/jms/src/org/opendds/jms/ConsumerDataReaderListener.java:
        * java/jms/src/org/opendds/jms/DataWriterPair.java:
        * java/jms/src/org/opendds/jms/DurableMessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/MapBodyFacade.java:
        * java/jms/src/org/opendds/jms/MessageConsumerImpl.java:
        * java/jms/src/org/opendds/jms/MessageDispatcher.java:
        * java/jms/src/org/opendds/jms/MessageProducerImpl.java: