@@ -1,3 +1,10 @@
+Wed Dec 17 23:42:28 UTC 2008  Adam Mitz  <mitza@ociweb.com>
+
+        * java/build_scripts/jms_scoreboard.pl:
+
+          Use PerlACE::Process to launch junit tests so that
+          we can enforce a timeout.
+
 Mon Dec 15 23:36:26 UTC 2008  Steven Stallion  <stallions@ociweb.com>
 
         * java/jms/INSTALL:
